--- a/booking/client/package.json
+++ b/booking/client/package.json
@@ -9,24 +9,27 @@
     "@formatjs/intl-relativetimeformat": "^7.3.6",
     "@fortawesome/fontawesome-free-webfonts": "^1.0.9",
     "axios": "^0.21.1",
-    "bootstrap": "^5.0.1",
+    "bootstrap": "^5.3.2",
     "connected-react-router": "^6.9.1",
     "lodash": "^4.17.21",
     "moment": "^2.29.0",
-    "node-sass": "^6.0.0",
+    "node-sass": "^4.14.1",
     "react": "^17.0.2",
     "react-auth-wrapper": "^1.0.0",
     "react-autosuggest": "^10.1.0",
     "react-bootstrap-table-next": "^4.0.3",
     "react-bootstrap-table2-filter": "^1.3.3",
     "react-custom-scrollbars": "^4.2.1",
+    "react-datepicker": "^4.21.0",
     "react-dom": "^17.0.2",
     "react-flatpickr": "^3.10.7",
     "react-intl": "^5.20.2",
+    "react-quill": "^2.0.0",
     "react-redux": "^7.2.4",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.3",
+    "react-select": "^5.7.7",
     "react-slick": "^0.28.1",
     "react-toastify": "^5.5.0",
     "reactstrap": "^8.10.1",
@@ -43,7 +46,11 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "preinstall": "npx npm-force-resolutions"
+  },
+  "resolutions": {
+    "react-error-overlay": "6.0.9"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -59,5 +66,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "react-error-overlay": "^6.0.9"
   }
 }
